clusters/production/apps/kubescape-production/namespace-kubescape-production.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubescape-production
  labels:
    app.kubernetes.io/part-of: production
